--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,4 +17,13 @@
 
   </div>
 
+
+<meta property="og:url" content="{{ site.url }}{{ page.url }}" />
+<meta property="og:title" content="{{ page.og_title }}" />
+<meta property="og:description" content="{{ page.og_description }}" />
+<meta property="og:image" content="{{ site.url }}{{ page.og_image }}" />
+<meta property="og:type"  content="{{ page.og_type }}" />
+<meta property="og:locale"  content="en_US" />
+
+
 </header>
