--- a/_includes/head.html
+++ b/_includes/head.html
@@ -60,12 +60,35 @@
           {% if page.twitter_card.height %}<meta name="twitter:image:height" content="{{ page.twitter_card.height }}">{% endif %}
         {% endif %}
       {% endif %}
-    {% elsif site.twitter_image %}
-      <meta name="twitter:image:src" content="{{ site.twitter_image }}">
+    {% elsif page.image %}
+      <meta name="twitter:image:src" content="{{ page.image }}">
     {% endif %}
   
     {% include fonts.html %}
     {% include google_analytics.html %}
     {% seo %}
-  </head>
+
+
+  <!-- Twitter cards -->
+  <meta name="twitter:site"    content="@{{ site.twitter_username }}">
+  <meta name="twitter:creator" content="@{{ page.author }}">
+  <meta name="twitter:title"   content="{{ page.title }}">
+
+  {% if page.summary %}
+  <meta name="twitter:description" content="{{ page.summary }}">
+  {% else %}
+  <meta name="twitter:description" content="{{ site.description }}">
+  {% endif %}
+
+  {% if page.image %}
+  <meta name="twitter:card"  content="summary_large_image">
+  <meta name="twitter:image" content="{{ site.url }}{{ page.image }}">
+  {% else %}
+  <meta name="twitter:card"  content="summary">
+  <meta name="twitter:image" content="{{ site.title_image }}">
+  {% endif %}
+  <!-- end of Twitter cards -->
+
+
+</head>
   
