Adjusted seo tags

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -61,7 +61,7 @@
         {% endif %}
       {% endif %}
     {% elsif page.image %}
-      <meta name="twitter:image:src" content="{{ page.image }}">
+      <meta name="twitter:image" content="{{ page.image }}">
     {% endif %}
   
     {% include fonts.html %}
