--- a/_includes/head.html
+++ b/_includes/head.html
@@ -38,7 +38,9 @@
     {% elsif site.facebook_image %}
       <meta property="og:image" content="{{ site.facebook_image }}">
     {% endif %}
-    <meta name="twitter:card" content="{{ page.twitter_card.type | default: "summary" }}">
+    
+    
+    <!-- <meta name="twitter:card" content="{{ page.twitter_card.type | default: "summary" }}">
     {% if site.twitter_username %}<meta name="twitter:site" content="{{ site.twitter_username }}">{% endif %}
     <meta name="twitter:title" content="{{ title | truncate: 70 }}">
     <meta name="twitter:description" content="{{ description | truncate: 200 }}">
@@ -46,8 +48,9 @@
       <meta name="twitter:creator" content="{{ page.twitter_card.creator }}">
     {% elsif site.twitter_username %}
       <meta name="twitter:creator" content="{{ site.twitter_username }}">
-    {% endif %}
-    {% if page.twitter_card.image %}
+    {% endif %} -->
+
+    <!-- {% if page.twitter_card.image %}
       {% if page.twitter_card.type == 'gallery' %}
         <meta name="twitter:image0" content="{{ page.twitter_card.image }}">
         <meta name="twitter:image1" content="{{ page.twitter_card.image1 }}">
@@ -60,9 +63,9 @@
           {% if page.twitter_card.height %}<meta name="twitter:image:height" content="{{ page.twitter_card.height }}">{% endif %}
         {% endif %}
       {% endif %}
-    {% elsif page.image %}
-      <meta name="twitter:image" content="{{ page.image }}">
-    {% endif %}
+    {% elsif site.twitter_image %}
+      <meta name="twitter:image:src" content="{{ site.twitter_image }}">
+    {% endif %} -->
   
     {% include fonts.html %}
     {% include google_analytics.html %}
@@ -73,13 +76,13 @@
   <meta name="twitter:site"    content="@{{ site.twitter_username }}">
   <meta name="twitter:creator" content="@{{ page.author }}">
   <meta name="twitter:title"   content="{{ page.title }}">
-
+  
   {% if page.summary %}
   <meta name="twitter:description" content="{{ page.summary }}">
   {% else %}
   <meta name="twitter:description" content="{{ site.description }}">
   {% endif %}
-
+  
   {% if page.image %}
   <meta name="twitter:card"  content="summary_large_image">
   <meta name="twitter:image" content="{{ site.url }}{{ page.image }}">
