--- a/_includes/head.html
+++ b/_includes/head.html
@@ -84,11 +84,11 @@
   {% endif %}
   
   {% if page.image %}
-  <meta name="twitter:card"  content="page.summary">
+  <meta name="twitter:card"  content="summary_large_image">
   <meta name="twitter:image" content="{{ site.url }}{{ page.image }}">
   {% else %}
   <meta name="twitter:card"  content="summary">
-  <meta name="twitter:image" content="{{ site.title_image }}">
+  <meta name="twitter:image" content="{{ site.url }}{{ page.image }}">
   {% endif %}
   <!-- end of Twitter cards -->
 
