--- a/_includes/head.html
+++ b/_includes/head.html
@@ -40,7 +40,7 @@
     {% endif %}
     
     
-    <!-- <meta name="twitter:card" content="{{ page.twitter_card.type | default: "summary" }}">
+    <meta name="twitter:card" content="{{ page.twitter_card.type | default: "summary" }}">
     {% if site.twitter_username %}<meta name="twitter:site" content="{{ site.twitter_username }}">{% endif %}
     <meta name="twitter:title" content="{{ title | truncate: 70 }}">
     <meta name="twitter:description" content="{{ description | truncate: 200 }}">
@@ -50,7 +50,7 @@
       <meta name="twitter:creator" content="{{ site.twitter_username }}">
     {% endif %} -->
 
-    <!-- {% if page.twitter_card.image %}
+     {% if page.twitter_card.image %}
       {% if page.twitter_card.type == 'gallery' %}
         <meta name="twitter:image0" content="{{ page.twitter_card.image }}">
         <meta name="twitter:image1" content="{{ page.twitter_card.image1 }}">
@@ -65,7 +65,7 @@
       {% endif %}
     {% elsif site.twitter_image %}
       <meta name="twitter:image:src" content="{{ site.twitter_image }}">
-    {% endif %} -->
+    {% endif %} 
   
     {% include fonts.html %}
     {% include google_analytics.html %}
@@ -73,7 +73,7 @@
 
 
   <!-- Twitter cards -->
-  <meta name="twitter:site"    content="@{{ site.twitter_username }}">
+  <!-- <meta name="twitter:site"    content="@{{ site.twitter_username }}">
   <meta name="twitter:creator" content="@{{ page.author }}">
   <meta name="twitter:title"   content="{{ page.title }}">
   
@@ -89,7 +89,7 @@
   {% else %}
   <meta name="twitter:card"  content="summary">
   <meta name="twitter:image" content="{{ site.url }}{{ page.image }}">
-  {% endif %}
+  {% endif %} -->
   <!-- end of Twitter cards -->
 
 
