Included the html file.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,6 +16,8 @@ layout: default
     {{ content }}
   </div>
 
+  {% include buymeacoffee.html %}
+
   {% if site.comments == true and page.comments != false %}
     <div class="post-comments" itemprop="comment">
       {% include custom_comments_provider.html %}
