Included custom css in the head.html

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,6 +18,9 @@
     {% endif %}
   
     <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
+    <link rel="stylesheet" href="{{ "/assets/customstyles.css" | relative_url }}">
+
+ 
     <link rel="canonical" href="{{ canonical }}">
     {% assign feed_path = "/feed.xml" %}
     {% if site.feed and site.feed.path %}
