Fixed a typo in buymeacoffee

--- a/_includes/buymeacoffee.html
+++ b/_includes/buymeacoffee.html
@@ -1,4 +1,4 @@
 <div class = "centerstyle">
-    <p>Like our articles? Support us buy buying us a coffee/pizza. It will help us with the server costs. </p>
+    <p>Like our articles? Support us!</p>
     <a href="https://www.buymeacoffee.com/ohmyswift"><img src="https://link.ohmyswift.com/GQGjN"></a>
 </div>
