--- a/_includes/buymeacoffee.html
+++ b/_includes/buymeacoffee.html
@@ -1,4 +1,4 @@
 <div class = "centerstyle">
     <p>Like our articles? Support us!</p>
-    <a href="https://www.buymeacoffee.com/ohmyswift"><img src="https://link.ohmyswift.com/GQGjN"></a>
+    <a href="https://www.buymeacoffee.com/ohmyswift"><img src="https://img.buymeacoffee.com/button-api/?text=Buy me a pizza&emoji=🍕&slug=ohmyswift&button_colour=FFDD00&font_colour=000000&font_family=Inter&outline_colour=000000&coffee_colour=ffffff"></a>
 </div>
