Changed app show case app.

--- a/_includes/appshowcase.html
+++ b/_includes/appshowcase.html
@@ -1,8 +1,9 @@
 <div>
-<a class="notification sponsor" href="https://proxyman.io/?utm_source=ohmyswift&amp;utm_medium=appshowcase&amp;utm_campaign=mar" target="_blank">
-    <img src="https://i.ibb.co/YXx845F/f1aba60e-b071-4afd-bde6-7c123853a3ae.png">
+<a class="notification sponsor" href="https://winya.link/getwinya?utm_source=ohmyswift&amp;utm_medium=appshowcase&amp;utm_campaign=apr" target="_blank">
+    <img src="https://winya.app/assets/img/Winya_logo_squircle.png">
     <div>
-    <p>Developers, rejoice. We have an excellent debug assistant to add to your toolkit. Its name is <span class="sponsor-title"> Proxyman </span> – from Proxy + middleMan. Natively built for macOS, the app is an easy way to intercept HTTP/HTTPS requests and debug from your Mac, iOS simulator, or remote devices without disrupting your network connection.</p>
+    <p>
+        Winya is a game stream platform handcrafted by a team of mobile gamers. With Winya, you can live stream all gameplay directly to Twitch from your iPhone, and iPad.</p>
     </div>
 </a>
 </div>
