--- a/_includes/appshowcase.html
+++ b/_includes/appshowcase.html
@@ -1,9 +1,10 @@
 <div>
-<a class="notification sponsor" href="https://winya.link/getwinya?utm_source=ohmyswift&amp;utm_medium=appshowcase&amp;utm_campaign=apr" target="_blank">
-    <img src="https://winya.app/assets/img/Winya_logo_squircle.png">
+<a class="notification sponsor" href="https://apps.apple.com/in/app/sourcery-pro/id1561780836?utm_source=ohmyswift&amp;utm_medium=appshowcase&amp;utm_campaign=apr" target="_blank">
+    <img src="https://is3-ssl.mzstatic.com/image/thumb/Purple114/v4/60/44/d4/6044d49b-38e3-3ab1-5139-babf2e7ace97/AppIcon-0-85-220-0-4-2x.png/1200x630bb.png">
     <div>
     <p>
-        Winya is a game stream platform handcrafted by a team of mobile gamers. With Winya, you can live stream all gameplay directly to Twitch from your iPhone, and iPad.</p>
+        Sourcery Pro is the most advanced Xcode Source extension ever made. Do you hate writing protocol mocks, adding Codable conformance,or just writing same patterns over and over again?
+        Now you no longer need to, it's just a shortcut away, and you can automate any other repetitions in your Swift codebase too!</p>
     </div>
 </a>
 </div>
