--- a/_includes/appshowcase-mini.html
+++ b/_includes/appshowcase-mini.html
@@ -1,12 +1,12 @@
 <div>
-    <a class="notification sponsor" href="https://apps.apple.com/app/id1504093464?utm_source=ohmyswift&amp;utm_medium=appshowcase-mini&amp;utm_campaign=may" target="_blank">
-    <img src="https://winya.app/assets/img/Winya_logo_squircle.png">
+    <a class="notification sponsor" href="https://apptelemetry.io/pages/download.html?utm_source=ohmyswift&amp;utm_medium=appshowcase&amp;utm_campaign=may" target="_blank">
+    <img src="https://apptelemetry.io/images/Mac%20App%20512pt@2x.png">
     <div>
     <p class= "sponsor-title">
-        Winya: Live Stream Games
+        AppTelemetry
     </p>
     <p>
-        Winya is a free live streaming app using which you can live stream your gameplay or your artwork tutorial directly to Twitch from your iPhone, and iPad. Download the app and support the developers! </p>
+        AppTelemetry is a new service that helps app and web developers improve their product by supplying immediate, accurate telemetry data while users use your app. And the best part: It's all anonymized so your users' data stays private! </p>
     </div>
 </a>
 </div>
