--- a/_includes/appshowcase.html
+++ b/_includes/appshowcase.html
@@ -1,5 +1,5 @@
 <div>
-    <a class="notification sponsor" href="https://host-palace.com/?utm_source=ohmyswift&amp;utm_medium=appshowcase&amp;utm_campaign=may" target="_blank">
+    <a class="notification sponsor" href="http://host-palace.com/?affid=13?utm_source=ohmyswift&amp;utm_medium=appshowcase&amp;utm_campaign=may" target="_blank">
         <img src=" https://is2-ssl.mzstatic.com/image/thumb/Purple114/v4/30/44/e0/3044e006-d5a3-fc74-d0a3-b56c993078ce/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/460x0w.png">
     <div>
     <p>
