Changed app showcase link and description

--- a/_includes/hostpalace.html
+++ b/_includes/hostpalace.html
@@ -1,3 +1,3 @@
 <div class = "centerstyle">
-    <p>Ohmyswift is hosted at <a href="http://host-palace.com/?affid=13?utm_source=ohmyswift&amp;utm_medium=appshowcase&amp;utm_campaign=may">HostPalace</a> </p>
+    <p>Ohmyswift is hosted at <a href="https://host-palace.com/?affid=13">HostPalace</a> </p>
 </div>
