--- a/_includes/appshowcase-mini.html
+++ b/_includes/appshowcase-mini.html
@@ -1,12 +1,12 @@
 <div>
-    <a class="notification sponsor" href="https://apptelemetry.io/pages/download.html?utm_source=ohmyswift&amp;utm_medium=appshowcase&amp;utm_campaign=may" target="_blank">
-    <img src="https://apptelemetry.io/images/Mac%20App%20512pt@2x.png">
+    <a class="notification sponsor" href="https://apps.apple.com/app/id1504093464?utm_source=ohmyswift&amp;utm_medium=appshowcase-mini&amp;utm_campaign=may" target="_blank">
+    <img src="https://winya.app/assets/img/Winya_logo_squircle.png">
     <div>
     <p class= "sponsor-title">
-        AppTelemetry
+        Winya: Live Stream Games
     </p>
     <p>
-        AppTelemetry is a new service that helps app and web developers improve their product by supplying immediate, accurate telemetry data while users use your app. And the best part: It's all anonymized so your users' data stays private! </p>
+        Become a Streamer by starting a live stream from your iPhone/iPad to Twitch/YouTube or any live streaming service of your choice. Download the app and become a creator now!</p>
     </div>
 </a>
 </div>
