--- a/_includes/appshowcase-mini.html
+++ b/_includes/appshowcase-mini.html
@@ -1,9 +1,9 @@
 <div>
     <a class="notification sponsor" href="https://apps.apple.com/app/id1504093464?utm_source=ohmyswift&amp;utm_medium=appshowcase-mini&amp;utm_campaign=may" target="_blank">
-    <img src="https://winya.app/assets/img/winya-squircle.png">
+    <img src="https://i.imgur.com/fxMOwQS_d.webp">
     <div>
     <p class= "sponsor-title">
-        Winya: Live Stream Games
+        Winya: Best game streaming app for iPhone/iPad
     </p>
     <p>
         Become a Streamer by starting a live stream from your iPhone/iPad to Twitch/YouTube or any live streaming service of your choice. Download the app and become a creator now!</p>
