--- a/_includes/appshowcase-mini.html
+++ b/_includes/appshowcase-mini.html
@@ -1,13 +1,12 @@
-
 <div>
-    <a class="notification sponsor" href="https://winya.link/get" target="_blank">
-    <img src="https://ik.imagekit.io/cfsimagecdn/Winya/winya_512_qKON5oTjw.png">
+    <a class="notification sponsor" href="https://logto.io?utm_source=ohmyswift_blog" target="_blank">
+    <img src="https://i.imgur.com/Gf4Zgu6.png">
     <div>
     <p class= "sponsor-title">
-        Winya: Best live streaming app
+        Logto: Open source identity solution
     </p>
     <p>
-        Become a Streamer by starting a live stream from your iPhone/iPad to Twitch/YouTube or any live streaming service of your choice. Download the app and become a creator now!</p>
+        Logto helps you build the sign-in, auth, and user identity within minutes. It supports username, phone number, email, and social sign-in, for web and native apps.</p>
     </div>
 </a>
 </div>
