Added the article "How to send Remote Push Notifications to an iOS Simulator with Xcode 14"

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,6 +30,7 @@
   
     <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
     <link rel="stylesheet" href="{{ "/assets/customstyles.css" | relative_url }}">
+    <link rel="stylesheet" href="{{ "/assets/custom_image.css" | relative_url }}">
 
  
     <link rel="canonical" href="{{ canonical }}">
