--- a/_includes/google-ads.html
+++ b/_includes/google-ads.html
@@ -1,16 +1,15 @@
 <div class="ad">
-
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5438585889359796"
     crossorigin="anonymous"></script>
+<!-- Responsive 11 -->
 <ins class="adsbygoogle"
     style="display:block"
-    data-ad-format="fluid"
-    data-ad-layout-key="-5t+ck+1l-ej+j9"
     data-ad-client="ca-pub-5438585889359796"
-    data-ad-slot="9183372794"></ins>
+    data-ad-slot="1302951147"
+    data-ad-format="auto"
+    data-full-width-responsive="true"></ins>
 <script>
     (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-
 
 </div>
