Modifications to the header

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -43,6 +43,7 @@
     {% include head_custom.html %}
   
     {% include fonts.html %}
+    {% include google-ads.html%}
     {% include google_analytics.html %}
     {% include google-new-analytics.html %}
 
