Added fonts and new article

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -41,8 +41,9 @@
     {% endif %}
   
     <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
-    <link rel="stylesheet" href="{{ "/assets/customstyles.css" | relative_url }}">
-    <link rel="stylesheet" href="{{ "/assets/custom_image.css" | relative_url }}">
+    <link rel="stylesheet" href="{{ "/assets/css/fonts.css" | relative_url }}">
+    <link rel="stylesheet" href="{{ "/assets/css/customstyles.css" | relative_url }}">
+    <link rel="stylesheet" href="{{ "/assets/css/custom_image.css" | relative_url }}">
 
  
     <link rel="canonical" href="{{ canonical }}">
