--- a/_includes/appshowcase-mini.html
+++ b/_includes/appshowcase-mini.html
@@ -1,3 +1,12 @@
 <div>
-
+    <a class="notification sponsor" href="https://apps.apple.com/app/apple-store/id1590127239?pt=423641&ct=iosblog&mt=8" target="_blank">
+    <img src="https://www.zohowebstatic.com/sites/zweb/images/productlogos/todo.svg">
+    <div>
+    <p class= "sponsor-title">
+        Zoho ToDo: Get work organised 
+    </p>
+    <p>
+        Zoho ToDo is the ultimate task management application for all your personal and work tasks. <br /> With clean views, personal and group tasks, categories, Kanban boards, social-media style collaboration, and mobile-exclusive features, you'll start enjoying every task you do!
+    </div>
+</a>
 </div>
