--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,6 +17,7 @@ layout: default
   </div>
   <!-- {% include commento.html %} -->
   <!-- {% include subscription-form.html %} -->
+  {% include appshowcase-mini.html %}
   {% include buymeacoffee.html %}
 
 </article>
