--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@ layout: default
   <div class="post-content" itemprop="articleBody">
     {{ content }}
   </div>
-  <!-- {% include commento.html %} -->
+  {% include comments.html %}
   <!-- {% include subscription-form.html %} -->
   {% include appshowcase-mini.html %}
   {% include buymeacoffee.html %}
