--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,2 +1,2 @@
 <script defer src="https://comments.ohmyswift.com/comentario.js"></script>
-<comentario-comments></comentario-comments>
+<comentario-comments theme="light"></comentario-comments>
