--- a/_includes/appshowcase.html
+++ b/_includes/appshowcase.html
@@ -1,5 +1,5 @@
 <div>
-    <a class="notification sponsor" href="https://zoho.to/OMS" target="_blank">
+    <a class="notification sponsor" href="https://zoho.to/3h5" target="_blank">
     <img src="https://www.zohowebstatic.com/sites/zweb/images/productlogos/apptics.svg">
     <div>
     <p class= "sponsor-title">
